# no2amaranth

./: .gitmodules  LICENSE.md  README.md  setup.cfg
examples/: amaranth_icebreaker_bitsy_muacm.py  amaranth_icebreaker_muacm.py  nmigen_icebreaker_muacm.py
src/no2amaranth/: __init__.py  amaranth.py
src/no2nmigen/: __init__.py  nmigen.py
