[metadata]
name = no2amaranth
version = 0.0.1
author = Sylvain Munaut
author_email = tnt@246tNt.com
description = Amaranth HDL wrappers for select Nitro FPGA cores
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/no2fpga/no2amaranth
project_urls =
    Bug Tracker = https://github.com/no2fpga/no2amaranth/issues
    Source Code = https://github.com/no2fpga/no2amaranth
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.package_data]
 no2amaranth =
    cores/no2muacm-bin/muacm.v
    cores/no2muacm-bin/muacm_customize.py

[options.packages.find]
where = src
